<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_delete_all_product">Delete All</string>
    <string name="action_delete_current_product">Delete</string>
    <string name="action_edit_product">Edit</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="shipment">Shipment</string>

    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_hint">Quantity</string>
    <string name="price">Price:</string>
    <string name="dollar">$</string>
    <string name="supname">Supplier:</string>
    <string name="supname_hint">Name</string>
    <string name="supmail">Email:</string>
    <string name="supmail_hint">Supplier Email</string>
    <string name="add_allinfo">Enter All information, with real data please!</string>
    <string name="AddImagesPlease"> Add image please!</string>
    <string name="empty_inventory">The Inventory is Empty</string>
    <string name="adding_product">Start by adding a Product!</string>
    <string name="intentType">image/*</string>
    <string name="selectPicture">Select picture please!</string>
    <string name="sell_succesfull">Sell successful!</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="ordering_products">Ordering Products</string>
    <string name="send_email">Send Email</string>
    <string name="selling_quantity">Add number in selling quantity:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="received_shipment">Enter the received shipment quantity:</string>
    <string name="delete_current_product">Delete current product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_failed">Delete has failed, can not delete product!</string>
    <string name="delete_successful">Delete was successful!</string>

    <string name="product_details">Product Details</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="discard_changes">Discard your changes and keep Editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="data_insert_failed">Product insert has failed!</string>
    <string name="data_insert_successful">Product insert is successful!</string>
    <string name="data_update_failed">Product update has failed!</string>
    <string name="data_update_successful">Product update is successful!</string>

    <string name="all_inventory_delete">Do you want to delete all product?</string>
    <string name="unknown">Unknown</string>
    <string name="quantity_modify_sell_add">Quantity modify (sell/add):</string>
    <string name="in_stock">In stock</string>

</resources>
